{
    "name": "TouchControls",
    "maps": [
        {
            "name": "SwipeInput",
            "id": "69357a1b-85ea-44fe-9552-0b8fec3cfb56",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "c7871439-82b6-4956-8986-9457ee4130ba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "3a3aa49f-30a2-47a7-ae0c-3e1f5b4a4f75",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40efe6d1-f24d-43eb-ae09-798c87d8509b",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33adcd91-e782-4af1-bcb5-c893128ebf37",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}