{
    "name": "InputAction",
    "maps": [
        {
            "name": "TouchControls",
            "id": "d378e7bb-3eef-4979-801e-584cdc1d8574",
            "actions": [
                {
                    "name": "SwipeUp",
                    "type": "Button",
                    "id": "85169709-a5ff-4594-82a3-dbd27cc64b76",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43388417-0a53-4aad-a36d-c9975fb3aea7",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwipeUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}